--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }} - {{ site.title }}</title>
-    <link rel="stylesheet" href="css/layout.css" />
+    <link rel="stylesheet" href="/css/layout.css" />
   </head>
   <body>
     <header role="header"><h1>{{ page.title }}</h1></header>
@@ -11,9 +11,9 @@
     <nav role="navigation">
         <h1 class="nocontent">Navigation</h1>
         <a href="/">Home</a>
-        <a href="/experiences">Experiences</a>
-        <a href="/cv">CV</a>
-        <a href="/about">About</a>
+        <a href="/2014/04/30/test-post">Blog</a>
+        <!--<a href="/cv">CV</a>-->
+        <!--<a href="/about">About</a>-->
     </nav>
     <footer role="footer">
         <a href="https://se.linkedin.com/in/johannes-qvarford-305905103">LinkedIn</a>
