--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <nav role="navigation">
         <h1 class="nocontent">Navigation</h1>
         <a href="/">Home</a>
-        <a href="/2014/04/30/test-post">Blog</a>
+        <a href="/blog">Blog</a>
         <!--<a href="/cv">CV</a>-->
         <!--<a href="/about">About</a>-->
     </nav>
