--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,11 @@
+---
+---
 <!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }} - {{ site.title }}</title>
-    <link rel="stylesheet" href="/css/layout.css" />
+    <link rel="stylesheet" href="/css/layout.css?v={{site.time | date: '%s'}}" />
   </head>
   <body>
     <header role="header"><h1>{{ page.title }}</h1></header>
