--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,9 @@
     <meta charset="utf-8">
     <title>{{ page.title }} - {{ site.title }}</title>
     <link rel="stylesheet" href="/css/layout.css?v={{site.time | date: '%s'}}" />
+    {% if page.style %}
+      <link rel="stylesheet" href="/css/{{ page.style }}.css?v={{site.time | date: '%s'}}" />
+    {% endif %}
   </head>
   <body>
     <header role="header"><h1>{{ page.title }}</h1></header>
