--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,11 +4,7 @@ layout: default
 <article>
   <h1>{{ page.title }}</h1>
   <p class="meta">
-    {{ page.date | date_to_string }}
-    {% if page.original_date %}
-      (Originally published on my old site on {{ page.original_date | date_to_string }})
-    {% endif %}
+    Written on {{ page.date | date_to_string }}
   </p>
-
   {{ content }}
 </article>
