--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }} - {{ site.title }}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/layout.css?v={{site.time | date: '%s'}}" />
     {% if page.style %}
       <link rel="stylesheet" href="/css/{{ page.style }}.css?v={{site.time | date: '%s'}}" />
