--- a/css/smw-hacking.scss
+++ b/css/smw-hacking.scss
@@ -12,3 +12,9 @@
     margin: 16px;
     max-width: 250px;
 }
+
+@media (max-width: 300px) {
+    .title-images img {
+        max-width: 90%;
+    }
+}
