✓ Fix outline according to HTML outliner.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,16 +12,16 @@
     {% endif %}
   </head>
   <body>
-    <header role="header"><h1>{{ page.title }}</h1></header>
-    <main role="content">{{ content }}</main>
-    <nav role="navigation">
-        <h1 class="nocontent">Navigation</h1>
+    <header><h1>{{ site.title }}</h1></header>
+    <main>{{ content }}</main>
+    <nav>
+        <h2 class="nocontent">Navigation</h2>
         <a href="/">Home</a>
         <a href="/blog">Blog</a>
         <!--<a href="/cv">CV</a>-->
         <!--<a href="/about">About</a>-->
     </nav>
-    <footer role="footer">
+    <footer>
         <a href="https://se.linkedin.com/in/johannes-qvarford-305905103">LinkedIn</a>
         <a href="https://github.com/johannes-qvarford">Github</a>
     </footer>
