✓ Follow w3 validator suggestions.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 ---
 ---
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }} - {{ site.title }}</title>
@@ -22,8 +22,8 @@
         <!--<a href="/about">About</a>-->
     </nav>
     <footer>
-        <a href="https://se.linkedin.com/in/johannes-qvarford-305905103">LinkedIn</a>
-        <a href="https://github.com/johannes-qvarford">Github</a>
+        <a href="https://se.linkedin.com/in/johannes-qvarford-305905103">My LinkedIn</a>
+        <a href="https://github.com/johannes-qvarford">My Github</a>
     </footer>
   </body>
 </html>
