--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -1,3 +1,10 @@
+$big-font-size: 32px;
+$header-height: 50px;
+$footer-height: 50px;
+$top-nav-height: 50px;
+$large-footer-height: 100px;
+$side-nav-width: 400px;
+
 body { background: lightgray }
 
 body {
@@ -5,7 +12,7 @@ body {
   display: grid;
   min-height: 100vh;
   grid-template-columns: 100%;
-  grid-template-rows: 50px 50px 1fr 50px;
+  grid-template-rows: $header-height $top-nav-height 1fr $footer-height;
   grid-template-areas: "header"
     "nav"
     "main"
@@ -24,7 +31,6 @@ main {
 
 nav {
   grid-area: nav;
-  
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -70,4 +76,39 @@ article {
 
 .self-picture {
   float: right;
+}
+
+@media (min-width: 1024px) {
+
+  body {
+    grid-template-columns: $side-nav-width calc(100vw  - #{$side-nav-width});
+    grid-template-rows: $header-height calc(100vh - (#{$header-height} + #{$large-footer-height})) $large-footer-height;
+    grid-template-areas: "header header"
+      "nav main"
+      "footer footer";
+  }
+
+  main {
+    overflow: auto;
+  }
+
+  nav {
+    flex-direction: column;
+    justify-content: start;
+  }
+  
+  nav > a {
+    flex: 0 1 auto;
+    border: none;
+    margin: 8px;
+    font-size: $big-font-size;
+  }
+  
+  nav > a + a {
+    border: none;
+  }
+
+  footer > a {
+    font-size: $big-font-size;
+  }
 }
