✓ Don't use abbreviations in dates

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 <article>
   <h2>{{ page.title }}</h2>
   <p class="meta">
-    Written on {{ page.date | date_to_string }}
+    Written on {{ page.date | short_date }}
   </p>
   {{ content }}
 </article>
