--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -1,9 +1,12 @@
-$big-font-size: 32px;
-$header-height: 50px;
-$footer-height: 50px;
-$top-nav-height: 50px;
-$large-footer-height: 100px;
-$side-nav-width: 400px;
+:root {
+  --big-font-size: 32px;
+  --header-height: 50px;
+  --footer-height: 50px;
+  --top-nav-height: 50px;
+  --large-footer-height: 100px;
+  --side-nav-width: 400px;
+}
+
 
 body { background: lightgray }
 
@@ -14,7 +17,7 @@ body {
   display: grid;
   min-height: 100vh;
   grid-template-columns: 100%;
-  grid-template-rows: $header-height $top-nav-height 1fr $footer-height;
+  grid-template-rows: var(--header-height) var(--top-nav-height) 1fr var(--footer-height);
   grid-template-areas: "header"
     "nav"
     "main"
@@ -97,8 +100,8 @@ h1 {
 @media (min-width: 1024px) {
 
   body {
-    grid-template-columns: $side-nav-width calc(100vw  - #{$side-nav-width});
-    grid-template-rows: $header-height calc(100vh - (#{$header-height} + #{$large-footer-height})) $large-footer-height;
+    grid-template-columns: var(--side-nav-width) calc(100vw  - var(--side-nav-width));
+    grid-template-rows: var(--header-height) calc(100vh - (var(--header-height) + var(--large-footer-height))) var(--large-footer-height);
     grid-template-areas: "header header"
       "nav main"
       "footer footer";
@@ -117,7 +120,7 @@ h1 {
     flex: 0 1 auto;
     border: none;
     margin: 8px;
-    font-size: $big-font-size;
+    font-size: var(--big-font-size);
   }
   
   nav > a + a {
@@ -125,6 +128,6 @@ h1 {
   }
 
   footer > a {
-    font-size: $big-font-size;
+    font-size: var(--big-font-size);
   }
 }
