--- a/css/bricknode-financial-module.scss
+++ b/css/bricknode-financial-module.scss
@@ -1,15 +1,8 @@
 ---
 ---
 
-.title-images {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-}
-
 .title-images img {
-    margin: 16px;
-    width: 90%;
     max-width: 96px;
 }
+
+@import "one-image-article.scss"
