--- a/css/solutions-system.scss
+++ b/css/solutions-system.scss
@@ -1,14 +1,4 @@
 ---
 ---
 
-.title-images {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.title-images img {
-    margin: 16px;
-    width: 90%;
-}
+@import "one-image-article.scss"
