--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,140 +1,129 @@
 :root {
-    --big-font-size: 32px;
-    --header-height: 50px;
-    --footer-height: 50px;
-    --top-nav-height: 50px;
-    --large-footer-height: 100px;
-    --side-nav-width: 400px;
-  }
+  --big-font-size: 32px;
+  --header-height: 30px;
+  --top-nav-height: 30px;
+  --footer-height: 50px;
+}
+
+body {
+  background: lightgray
+}
+
+body {
+  background-color: black;
+  color: white;
+
+  margin: auto;
+  border: 2px solid;
+  border-radius: 8px;
   
-  
-  body { background: lightgray }
-  
-  body {
-    background-color: black;
-    color: white;
-    margin: 0;
-    display: grid;
-    min-height: 100vh;
-    grid-template-columns: 100%;
-    grid-template-rows: var(--header-height) var(--top-nav-height) 1fr var(--footer-height);
-    grid-template-areas: "header"
-      "nav"
-      "main"
-      "footer";
-  }
-  
-  body a {
-    color: #8080FF;
-    text-decoration: unset;
-  }
-  
-  body a:visited {
-    color: #ba73be;
-  }
-  
-  header {
-    grid-area: header;
-    text-align: center;
-    align-self: center;
-  }
-  
-  nav {
-    grid-area: nav;
-    display: flex;
-    align-items: center;
-    justify-content: space-between; 
-    text-align: center;
-  }
-  
-  nav > a {
-    flex: 1 1 auto;
-    border-right: 1px;
-  }
-  
-  nav > a + a {
-    border-left: solid 1px white;
-  }
-  
-  nav > a:last-child {
-    border-right: 0px;
-  }
-  
-  footer {
-    grid-area: footer;
-    margin: 0 auto; 
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-  }
-  
-  main {
-    grid-area: main;
-    padding: 16px;
-  }
-  
-  article {
-    max-width: 600px;
-    margin: auto;
+  display: grid;
+  min-height: 100vh;
+  max-width: 1000px;
+
+  grid-template-columns: 100%;
+  grid-template-rows: var(--header-height) var(--top-nav-height) 1fr var(--footer-height);
+  grid-template-areas: "header"
+    "nav"
+    "main"
+    "footer";
+}
+
+body a {
+  color: #8080FF;
+  text-decoration: unset;
+}
+
+body a:visited {
+  color: #ba73be;
+}
+
+header {
+  grid-area: header;
+  text-align: center;
+  align-self: center;
+}
+
+nav {
+  grid-area: nav;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+}
+
+nav>a {
+  flex: 1 1 auto;
+  border-right: 1px;
+}
+
+nav>a+a {
+  border-left: solid 1px white;
+}
+
+nav>a:last-child {
+  border-right: 0px;
+}
+
+footer {
+  grid-area: footer;
+  margin: 0 auto;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+main {
+  grid-area: main;
+  padding: 16px;
+}
+
+article {
+  max-width: 600px;
+  margin: auto;
+}
+
+.nocontent {
+  display: none;
+}
+
+.self-picture {
+  float: right;
+}
+
+h1 {
+  font-size: 6vw;
+}
+
+@media (min-width: 500px) {
+  :root {
+    --header-height: 40px;
+    --top-nav-height: 40px;
+    --footer-height: 70px;
   }
 
-  /* It looks weird on wide monitors if the left-aligned text is inside a small centered block. */
-  @media (min-width: 1468px) {
-    article {
-      margin-left: 100px
-    }
-  }
-  
-  .nocontent {
-    display: none;
-  }
-  
-  .self-picture {
-    float: right;
-  }
-  
   h1 {
-    font-size: 6vw;
+    font-size: 32px;
   }
-  
-  @media (min-width: 500px) {
-    h1 {
-      font-size: 32px;
-    }
+
+  nav, footer {
+    font-size: 20px;
   }
-  
-  @media (min-width: 1024px) {
-  
-    body {
-      grid-template-columns: var(--side-nav-width) calc(100vw  - var(--side-nav-width));
-      grid-template-rows: var(--header-height) calc(100vh - (var(--header-height) + var(--large-footer-height))) var(--large-footer-height);
-      grid-template-areas: "header header"
-        "nav main"
-        "footer footer";
-    }
-  
-    main {
-      overflow: auto;
-    }
-  
-    nav {
-      flex-direction: column;
-      justify-content: start;
-    }
-    
-    nav > a {
-      flex: 0 1 auto;
-      border: none;
-      margin: 8px;
-      font-size: var(--big-font-size);
-    }
-    
-    nav > a + a {
-      border: none;
-    }
-  
-    footer > a {
-      font-size: var(--big-font-size);
-    }
+}
+
+@media (min-width: 800px) {
+  :root {
+    --header-height: 60px;
+    --top-nav-height: 60px;
+    --footer-height: 90px;
   }
+
+  h1 {
+    font-size: 36px;
+  }
+
+  nav, footer {
+    font-size: 32px;
+  }
+}
